metadata/force-app/main/default/objects/CustomName_PQrri__c/CustomName_PQrri__c.object-meta.xml
<CustomObject>
    <description>Description_CvZrn</description>
    <label>CustomLabel_EJBBg</label>
    <nameField>
        <label>CustomLabel_EJBBg</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_EJBBgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>