metadata/force-app/main/default/objects/CustomName_PQrri__c/fields/CustomField_JxUXe__c.field-meta.xml
<CustomField>
    <fullName>CustomField_JxUXe__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldznWgJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>